<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
        android:id="@+id/movies"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/popular_movies" />

    <item
        android:id="@+id/now_playing"
        android:icon="@drawable/ic_recently_released_movies"
        android:title="@string/now_playing" />


    <item
        android:id="@+id/upcoming_movies"
        android:icon="@drawable/ic_upcoming_movies"
        android:title="@string/upcoming_movies" />

    <item
        android:id="@+id/toprated"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/top_rated_movies" />


    <item
        android:id="@+id/genres"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/genres" />

    <item
        android:id="@+id/favmovies"
        android:icon="@drawable/ic_heart_on"
        android:title="@string/favourite_movies" />


  </group>

</menu>
